<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:paddingLeft="10dp" android:paddingTop="10dp" android:layout_width="match_parent" android:layout_height="match_parent" android:weightSum="1">
    <TextView android:textSize="14dp" android:gravity="left" android:paddingBottom="20dp" android:layout_width="180dp" android:layout_height="wrap_content" android:text="@string/AnswersQuestionLabel"/>
    <TextView android:textSize="14dp" android:textColor="#332116" android:id="@+id/TheQuestionThatWasAnswered" android:paddingBottom="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="0.05"/>
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textSize="14dp" android:id="@+id/ThisWasYourAnswer" android:paddingBottom="10dp" android:layout_width="182dp" android:layout_height="wrap_content" android:text="@string/AnswersYourAnswerLabel" android:height="40dp" android:textAlignment="center"/>
        <TextView android:textSize="14dp" android:textColor="#332116" android:id="@+id/YourAnswerWas" android:paddingBottom="10dp" android:layout_width="match_parent" android:layout_height="match_parent" android:height="40dp" android:textAlignment="center"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="37dp">
        <TextView android:textSize="14dp" android:id="@+id/AnswersAnswerShouldvBinLabel" android:paddingBottom="10dp" android:layout_width="182dp" android:layout_height="32dp" android:text="@string/AnswerShouldHaveBeen" android:height="20dp" android:textAlignment="center"/>
        <TextView android:textSize="14dp" android:textColor="#332116" android:id="@+id/YourAnswerShouldHaveBeen" android:paddingBottom="10dp" android:layout_width="match_parent" android:layout_height="34dp" android:height="20dp" android:textAlignment="center"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textSize="14dp" android:paddingBottom="10dp" android:layout_width="182dp" android:layout_height="match_parent" android:text="@string/YourAnswerWasRightOrWrongLabel" android:height="20dp" android:textAlignment="center"/>
        <TextView android:textSize="14dp" android:textColor="#332116" android:id="@+id/YourAnswerWasTherefore" android:paddingBottom="10dp" android:layout_width="144dp" android:layout_height="36dp" android:height="20dp" android:textAlignment="center"/>
    </LinearLayout>
    <TextView android:textSize="14dp" android:id="@+id/ExplanationLabel" android:paddingBottom="10dp" android:layout_width="137dp" android:layout_height="wrap_content" android:text="@string/ExplanationLabel" android:height="20dp" android:layout_weight="0.04" android:textAlignment="center"/>
    <TextView android:textSize="14dp" android:textColor="#332116" android:id="@+id/TheExplanation" android:paddingBottom="10dp" android:layout_width="match_parent" android:layout_height="80dp" android:height="20dp" android:layout_weight="0.06" android:textAlignment="center"/>
</LinearLayout>